--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ whisper>=1.1.10,<2.0.0
 elevenlabs>=2.6.0,<3.0.0
 fastapi>=0.115.14,<0.116.0
 streamlit>=1.46.1,<2.0.0
-opencv-python>=4.12.0.88,<5.0.0.0
+opencv-python>=4.10.0.84,<4.11.0.0
 pytube>=15.0.0,<16.0.0
 python-multipart>=0.0.20,<0.0.21
 streamlit-webrtc>=0.63.3,<0.64.0
@@ -12,7 +12,6 @@ requests>=2.32.4,<3.0.0
 pygame>=2.6.1,<3.0.0
 uvicorn>=0.35.0,<0.36.0
 yt-dlp>=2025.6.30,<2026.0.0
-ffmpeg>=1.4,<2.0
+ffmpeg-python>=0.2.0,<0.3.0
 streamlit-mic-recorder>=0.0.8,<0.0.9
 aiohttp>=3.12.14,<4.0.0
-
